footer/navbar updates

--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -26,33 +26,36 @@
 
       <!-- lists -->
     <div class="row mt-3 contactUs">
-      <div class="col-4 s3bold pl-5">
-        <ul class="ml-5"> <span class="s2bold text-white">Lux Dream Event Hire</span> 
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5">
+        <ul class="ml-md-5"> <span class="s1 text-white">Lux Dream Event Hire</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
         </ul> 
        </div>
-      <div class="col-4 s3bold pl-5">
-        <ul class="ml-5"><span class="s2bold text-white">Our Services</span>
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5">
+        <ul class="ml-md-5"><span class="s1  text-white">Our Services</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a></li>
         </ul>
       </div>
-      <div class="col-4 s3bold pl-5">
-        <ul class="ml-5"><span class="s2bold text-white">Contact us</span>
-          <li class="mt-2 pt-2 text-decoration-underline text-white-50"><div class="row"><div class="col-4"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-8">112233456</div></div>
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5">
+        <ul class="ml-md-5"><span class="s1 text-white">Contact us</span>
+          <li class="mt-2 pt-2 text-decoration-underline text-white-50"><div class="row">
+            <div class="col-2"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-10">02108547654</div></div>
           </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
-              <div class="row"><div class="col-4"><i class="far fa-envelope mr-3"></i></div><div class="col-8">qwer@qwer.com</div></div>
+              <div class="row"><div class="col-2"><i class="far fa-envelope mr-3"></i></div><div class="col-10">qwer@qwer.com</div></div>
            </li>
 
-          <li class="mt-2 text-decoration-underline text-white-50"><div class="row"><div class="col-4"><i class="fas fa-map-marker-alt mr-3"></i></div><div class="col-8">25 Stock Street</div></div>
+          <li class="mt-2 text-decoration-underline text-white-50">
+            <div class="row"><div class="col-2"><i class="fas fa-map-marker-alt mr-3"></i></div><div class="col-10">25 Stock Street, New Lynn, Auckland</div></div>
             </li>
 
-          <li class="mt-2 text-decoration-underline text-white-50"><div class="row"><div class="col-4"><i class="fab fa-weixin mr-3"></i></div><div class="col-8">wechatId</div></div>
+          <li class="mt-2 text-decoration-underline text-white-50">
+            <div class="row"><div class="col-2"><i class="fab fa-weixin mr-3"></i></div><div class="col-10">wechatId</div></div>
           </li>
 
         </ul>
@@ -60,7 +63,7 @@
     </div>
     <!-- copyright -->
     <div class="row py-4">
-      <div class="col-12"><div class="s3gold text-center ">&copy; Lux Dream Event Hire 2019</div></div>
+      <div class="col-12"><div class="s2gold text-center ">&copy; Lux Dream Event Hire 2019</div></div>
     </div>
     
   </div>
