--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -5,13 +5,14 @@
   </div>
 </header> -->
 
-<div class="container-fluid faqImg">
+<!-- <div class="container-fluid faqImg">
     <div class="row py-3"> &nbsp;</div>
       <div class="row py-4"><div class="col-12 j1 text-center">Frequently Asked Questions</div></div>
       <div class="row py-3"> &nbsp;</div>
-</div>
+</div> -->
 <!-- accordion bit -->
 <div class="container">
+  <div class="row my-3 pb-4 l1 text-center"><div class="col-12">Frequently Asked Questions</div></div>
   <div id="panel panel-default">
       <div class="card" *ngFor='let question of questions; index as i'>
         <div class="card-header">
