--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -12,7 +12,7 @@
 </div> -->
 <!-- accordion bit -->
 <div class="container">
-  <div class="row my-3 pb-4 l1 text-center"><div class="col-12">Frequently Asked Questions</div></div>
+  <div class="row my-3 pb-4 l1 text-center"><div class="col-12">FAQ</div></div>
   <div id="panel panel-default">
       <div class="card" *ngFor='let question of questions; index as i'>
         <div class="card-header">
