--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -6,13 +6,14 @@ i
 }
 ul{
     list-style-type: none;
+    padding-left: 0px;
 }
 ul li {
     cursor: pointer;
 }
 .imgBlocks{
     width:100%;
-    height: 161.20px;
+    height: 221px;
 }
 .fab.fa-facebook-square:hover{
     color: white;
