--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -18,30 +18,30 @@
 
       <!-- imgs -->
     <div class="row">
-      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
-      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
-      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
-      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div>
+      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
+      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
+      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
+      <!-- <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div> -->
     </div>
 
       <!-- lists -->
-    <div class="row mt-3 contactUs">
-      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5">
-        <ul class="ml-md-5"> <span class="s1 text-white">Lux Dream Event Hire</span> 
+    <div class="row mt-5 contactUs">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold">
+        <ul> <span class="s1 text-white">Lux Dream Event Hire</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
         </ul> 
        </div>
-      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5">
-        <ul class="ml-md-5"><span class="s1  text-white">Our Services</span>
+      <div class="col-12 col-sm-6 col-lg-4 s2bold">
+        <ul><span class="s1  text-white">Our Services</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a></li>
         </ul>
       </div>
-      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5">
-        <ul class="ml-md-5"><span class="s1 text-white">Contact us</span>
+      <div class="col-12 col-sm-6 col-lg-4 s2bold">
+        <ul><span class="s1 text-white">Contact us</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><div class="row">
             <div class="col-2"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-10">02108547654</div></div>
           </li>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <!-- copyright -->
-    <div class="row py-4">
+    <div class="row py-2">
       <div class="col-12"><div class="s2gold text-center ">&copy; Lux Dream Event Hire 2019</div></div>
     </div>
     
