--- a/src/app/fcomponents/pages/aboutUs/aboutUs.component.css
+++ b/src/app/fcomponents/pages/aboutUs/aboutUs.component.css
@@ -1,11 +1,3 @@
-/* section1--------------------------------------------------------------------------------------------------------------------- */
-#section1
-{
-    height: 40vh;
-    width: 100%;
-    background-image: url("../../../../assets/images/headerimage.jpg");
-    background-size: cover;
-}
 hr{
     width: 30%;
 }
@@ -14,4 +6,8 @@ hr{
     width: 100%;
     overflow: hidden;
     text-align: -webkit-center;
+}
+.container {
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
