--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -1,13 +1,10 @@
 <div class="bg-dark">
-  <div class="container p-0">
+  <div class="container">
     <!-- follow us -->
     <div class="row" style="text-align:center">
-      <div class="col-md-4">
-        <br>
-      </div>
       <!-- facebook/ins/message -->
-      <div class="col-md-4 py-4">
-        <br>
+      <div class="col-12 py-4 text-center">
+        <br><br>
         <div class="mb-3">
           <i class="fab fa-facebook-square rounded-lg p-3 rounded"></i>
           <i class="fab fa-instagram rounded-lg p-3 rounded"></i>
@@ -15,7 +12,6 @@
         </div>
       </div>
     </div>
-
       <!-- imgs -->
     <div class="row">
       <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
@@ -26,21 +22,21 @@
 
       <!-- lists -->
     <div class="row mt-5 contactUs">
-      <div class="col-12 col-sm-6 col-lg-4 s2bold">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5 pl-md-3">
         <ul> <span class="s1 text-white">Lux Dream Event Hire</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
         </ul> 
        </div>
-      <div class="col-12 col-sm-6 col-lg-4 s2bold">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5 pl-md-3">
         <ul><span class="s1  text-white">Our Services</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a></li>
         </ul>
       </div>
-      <div class="col-12 col-sm-6 col-lg-4 s2bold">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5 pl-md-3">
         <ul><span class="s1 text-white">Contact us</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><div class="row">
             <div class="col-2"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-10">02108547654</div></div>
@@ -67,4 +63,3 @@
     </div>
     
   </div>
-</div>
