--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -1,70 +1,11 @@
-/* .navbar{
-    position:fixed;
-    z-index:99;
-    width:100%;
-}   
- a.nav-link
-{
-    color: white !important;
-    padding-top:20px;
-    padding-bottom: 18px;
+.navbar{
+    height:190px;
 }
-a.nav-link:focus
-{
-    color: #c48f45 !important;
-}
-
-#navbarId
-{
-padding: 0;
-}
-li.nav-item
-{
-   height:100%;
-   
-}
-.bg-light a.nav-link{color: black !important;}
-.bg-light li.nav-item :focus{color: #c48f45 !important;}
-.bg-light li.nav-item :hover
-{
-    color:rgb(85, 74, 74) !important;
-    background-color: #c48f45;
-    text-align: center; 
-    cursor: pointer; 
-    -webkit-transition: all .5s; 
-    -moz-transition: all .5s; 
-    -ms-transition: all .5s; 
-    -o-transition: all .5s; 
-    transition: all .5s;
-}
-button.navbar-toggler
-{outline: 0;}
-@media(max-width:768px) {
-    a.nav-link{color: black !important;}
-   #navbarId
-   {
-       background: white !important;
-       height: 60px !important;
-   }
-   ul{
-       background: white;
-   }
-   #logoimage
-   {
-    content:url(../../../../assets/images/Asset1-4x-small.png);
-   }
-   li.nav-item :hover
-{
-    background-color: #c48f45;
-    text-align: center; 
-    cursor: pointer; 
-    -webkit-transition: all .5s; 
-    -moz-transition: all .5s; 
-    -ms-transition: all .5s; 
-    -o-transition: all .5s; 
-    transition: all .5s;
-}
-} */
+@media only screen and (max-width: 767px) {
+    .navbar{
+        height:100px;
+    }
+  }
 .navbar-light .navbar-nav .nav-link.active
 {
     color: #c48f45 !important;
