--- a/src/app/fcomponents/pages/homepage/homepage.component.css
+++ b/src/app/fcomponents/pages/homepage/homepage.component.css
@@ -1,23 +1,3 @@
-.back1 {
-    background-repeat: no-repeat; 
-    background-image: url(https://www.thebigletterco.com.au/wp-content/uploads/2017/11/slide-bg-01.jpg); 
-    background-size: cover; 
-    background-position: center center;
-    width: 100%; 
-    height: 100%; 
-    opacity: 1; 
-    visibility: inherit;
-    z-index: 20;
-    padding-top:100px
-}
-.homeTopLogo1 img{
-    width: 400px;
-    height: 324px;
-}
-.homeTopLogo2 img{
-    height: auto;
-    max-width: 100%;
-}
 .productsOverview img{
     height: auto;
     max-width: 100%;
@@ -34,5 +14,12 @@ ul li{
     background-attachment: fixed;
 }
 .hireCollection img{
-    height:150px;
+    height:120px;
+}
+/* .carousel-caption{
+    position:static;
+} */
+.img100{
+    height:100%;
+    width:100%;
 }
