--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -30,44 +30,40 @@
       </div>
     </div>
   </div>
-
-  <!-- hireCollection -->
-  <div class="container p-0 my-5 hireCollection">
-      <div class="text-center mb-5 l2 lspace-3">Hire Collection</div>
-      <div class="row">
-        <div class="col-6 col-md-3 "><img src="../../../../assets/images/productImg1.jpeg" class="img100">
-          <div>Oblong Trestle Tables</div>
-          <div>$120</div>
-        </div>
-        <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg2.jpeg" class="img100">
-          <div>Round Tables</div>
-          <div>$120</div>
-        </div>
-        <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg3.png" class="img100">
-          <div>Round Tables</div>
-          <div>$120</div>
-        </div>
-        <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg2.jpeg" class="img100">
-          <div>Round Tables</div>
-          <div>$120</div>
+<div class="px-5 mx-2">
+    <!-- hireCollection -->
+<div class="my-5 hireCollection">
+    <div class="text-center mb-5 l2 lspace-3">Hire Collection</div>
+    <div class="row">
+      <div class="col-6 col-md-3 "><img src="../../../../assets/images/productImg1.jpeg" class="img100">
+        <div>Oblong Trestle Tables</div>
+        <div><span class="s2goldbold mr-5">$100</span>&nbsp; <s>$120</s></div>
+      </div>
+      <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg2.jpeg" class="img100">
+        <div>Round Tables</div>
+        <div><span class="s2goldbold">$100</span> &nbsp;<s>$120</s></div>
+      </div>
+      <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg3.png" class="img100">
+        <div>Round Tables</div>
+        <div><span class="s2goldbold">$100</span> &nbsp;<s>$120</s></div>
+      </div>
+      <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg2.jpeg" class="img100">
+        <div>Round Tables</div>
+        <div><span class="s2goldbold">$100</span> &nbsp;<s>$120</s></div>
+      </div>
+    </div>
+    <div class="row justify-content-md-center my-3">
+        <div class="col-12 text-center">
+          <button type="button" class="btn btn-outline-gold">View our products</button>
         </div>
       </div>
-      <div class="row justify-content-md-center my-3">
-          <div class="col-12 text-center">
-            <button type="button" class="btn btn-outline-gold">View our products</button>
-          </div>
-        </div>
     </div>
-
   <!-- product pics -->
-  <div
-    >
-    <div class="container my-5 border-top pt-5">
-      <div class="m1 text-center my-3">
+
+    <div class="m1 text-center my-3">
         This is title
       </div>
       <br>
-
       <div class="px-5 text-center">
         From the smallest detail to the grandest event, Got It Covered can take care of all the details. With the
         largest hire range in Nelson and Marlborough and with 13+ years experience our professional team of event
@@ -79,87 +75,71 @@
         large range of styles and events.
       </div>
       <br>
-    </div>
-  </div>
-  
 
-  <div class="container p-0 my-2">
-    <div class="row">
-      <div class="col-12 col-md-6" style="height:550px;">
-        <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
-        <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"style="height:100%;width:100%;"/>
-        </div>
-      <div class="col-12 col-md-6">
-        <br><br >
-        <div class="l2 mt-5 lspace-5">STYLING</div>
-        <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the
-          elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
-          events that inspire and excite!
-        </div>
-        <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
-      </div>
-    </div>
-
-    <div class="row mt-5">
-        <div class="col-12 col-md-6 pt-4 order-1 order-md-0">
-          <br><br>
-          <div class="l2 mt-5 lspace-5">CORPORATE EVENTS</div>
-          <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help
-            you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
-            grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
-            region since 2005 with an established reputation for excellence.
-          </div>
-          <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
-        </div>
-        <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
-          clip: rect(0px,auto,500px,0px);"></div> -->
-          <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
-      </div>
-  </div>
-
-  <!-- scrolling background -->
-  <div class="bgat" #bgat>
-    <div class="container my-5">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner text-center">
-          <div class="carousel-item active">
-              <div>
-                <br/><br><br/>
-                  <h5>First slide label</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <br/><br>
+      <div class="px-5 my-2">
+          <div class="row">
+              <div class="col-12 col-md-6" style="height:550px;">
+                <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
+                <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"style="height:100%;width:100%;"/>
                 </div>
-          </div>
-          <div class="carousel-item">
-              <div>
-                  <br/><br><br/>
-                  <h5>Second slide label</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <br/><br>
+              <div class="col-12 col-md-6">
+                <br><br >
+                <div class="l2 mt-5 lspace-5">STYLING</div>
+                <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the
+                  elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
+                  events that inspire and excite!
                 </div>
-          </div>
-          <div class="carousel-item">
-              <div>
-                  <br/><br><br/>
-                  <h5>Third slide label</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <br/><br>
+                <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
+              </div>
+            </div>
+        
+            <div class="row mt-5">
+                <div class="col-12 col-md-6 pt-4 order-1 order-md-0">
+                  <br><br>
+                  <div class="l2 mt-5 lspace-5">CORPORATE EVENTS</div>
+                  <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help
+                    you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
+                    grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
+                    region since 2005 with an established reputation for excellence.
+                  </div>
+                  <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
                 </div>
-          </div>
+                <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
+                  clip: rect(0px,auto,500px,0px);"></div> -->
+                  <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
+              </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
       </div>
-      <br> <br>
-      <div class="row"><div class="col-12 text-center">FOR MORE IMAGES OF OUR WORK VISIT THE GOT IT COVERED GALLERY</div></div>
-      <div class="row"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button></div></div>
 
-  </div>
-</div>
+        <!-- scrolling background -->
+        <div class="row">
+        <div class="col-12 bgat mt-5" #bgat >
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner text-center">
+                  <div class="carousel-item active">
+                      <div><br/><br><br/><h5>First slide label</h5><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><br/><br></div>
+                  </div>
+                  <div class="carousel-item">
+                      <div><br/><br><br/><h5>Second slide label</h5><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><br/><br></div>
+                  </div>
+                  <div class="carousel-item">
+                      <div><br/><br><br/><h5>Third slide label</h5><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><br/><br></div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+              </div>
+              <br> <br>
+              <div class="row"><div class="col-12 text-center">FOR MORE IMAGES OF OUR WORK VISIT THE GOT IT COVERED GALLERY</div></div>
+              <div class="row"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button></div></div>
+        </div>
+      </div>
+ </div>
+
 
