--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -1,46 +1,3 @@
-<!-- <nav class="navbar navbar-expand-md navbar-light" id="navbarId" [ngClass]="{ 'bg-light':!isTop}">
-  <a class="navbar-brand" routerLink='/homepage' routerLinkActive="active" >
-    <div *ngIf="smallwindow; then bigwindow else smallwindow"></div>
-    <ng-template #bigwindow>
-    <div *ngIf="isTop; then thenBlock else elseBlock"></div>
-    <ng-template #thenBlock>
-        <img id="logoimage" src="../../../../assets/images/Asset1-4x-mid.png">
-    </ng-template>
-    <ng-template #elseBlock>
-      <img src="../../../../assets/images/Asset1-4x-small.png">
-    </ng-template>
-  </ng-template>
-  <ng-template #smallwindow>
-    <img id="smallwindow" src="../../../../assets/images/Asset1-4x-small.png">
-  </ng-template>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" style="height:60px;" id="navbarNavDropdown">
-    <ul class="navbar-nav ml-auto " id="dropdown-menu" style="height:100%">
-      <li class="nav-item" >
-        <a class="nav-link s2" routerLink='/hire' routerLinkActive="active">Hire</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link s2" routerLink='/services' routerLinkActive="active">Party Services</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link s2" routerLink='/packages' routerLinkActive="active">Party Packages</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link s2" routerLink ='/aboutUs' routerLinkActive="active">About Us</a>
-        </li>
-      <li class="nav-item">
-        <a class="nav-link s2" routerLink ='/faq' routerLinkActive="active">FAQ</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link s2" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
-      </li>
-    </ul>
-  </div>
-</nav> -->
-
 <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0 lspace-3">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
@@ -70,6 +27,9 @@
     
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item pr-md-5">
+                <a class="nav-link s2bold" routerLink ='/gallery' routerLinkActive="active">Gallery</a>
+            </li>
             <li class="nav-item pr-md-5">
                 <a class="nav-link s2bold" routerLink ='/aboutUs' routerLinkActive="active">About us</a>
             </li>
