--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="bg-dark">
-  <div class="container">
+  <div class="container-fluid">
     <!-- follow us -->
     <div class="row" style="text-align:center">
       <!-- facebook/ins/message -->
@@ -13,7 +13,7 @@
       </div>
     </div>
       <!-- imgs -->
-    <div class="row">
+    <div class="row mx-0 mx-md-5">
       <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
       <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
       <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
@@ -21,22 +21,22 @@
     </div>
 
       <!-- lists -->
-    <div class="row mt-5 contactUs">
-      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5 pl-md-3">
+    <div class="row mt-5 contactUs mx-2 mx-md-5">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul> <span class="s1 text-white">Lux Dream Event Hire</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
         </ul> 
        </div>
-      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5 pl-md-3">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul><span class="s1  text-white">Our Services</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a></li>
         </ul>
       </div>
-      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-5 pl-md-3">
+      <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul><span class="s1 text-white">Contact us</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><div class="row">
             <div class="col-2"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-10">02108547654</div></div>
