--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -1,3 +1,10 @@
-<p>
-  gallery works!
-</p>
+<div class="container-fluid">
+  <div class="px-0 px-md-5 mx-2">
+  <div class="row text-center l1">
+  <div class="col-12"> Our Gallery</div>
+  </div>
+  <div class="row text-center l1"> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery1</div> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery2</div></div>
+  <div class="row text-center l1"> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery3</div> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery4</div></div>
+  <div class="row text-center l1"> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery5</div> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery6</div></div>
+  </div>  
+</div>
