--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -30,9 +30,9 @@
       </div>
     </div>
   </div>
-<div class="px-5 mx-2">
+<div class="px-0 px-md-5 mx-2">
     <!-- hireCollection -->
-<div class="my-5 hireCollection">
+<div class="hireCollection">
     <div class="text-center mb-5 l2 lspace-3">Hire Collection</div>
     <div class="row">
       <div class="col-6 col-md-3 "><img src="../../../../assets/images/productImg1.jpeg" class="img100">
@@ -58,11 +58,10 @@
         </div>
       </div>
     </div>
-  <!-- product pics -->
-
-    <div class="m1 text-center my-3">
+  <!-- Title paragraph -->
+    <div class="m1 text-center">
         This is title
-      </div>
+    </div>
       <br>
       <div class="px-5 text-center">
         From the smallest detail to the grandest event, Got It Covered can take care of all the details. With the
@@ -76,39 +75,37 @@
       </div>
       <br>
 
-      <div class="px-5 my-2">
-          <div class="row">
-              <div class="col-12 col-md-6" style="height:550px;">
-                <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
-                <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"style="height:100%;width:100%;"/>
-                </div>
-              <div class="col-12 col-md-6">
-                <br><br >
-                <div class="l2 mt-5 lspace-5">STYLING</div>
-                <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the
-                  elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
-                  events that inspire and excite!
-                </div>
-                <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
-              </div>
+      <div class="row">
+          <div class="col-12 col-md-6" style="height:550px;">
+            <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
+            <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"style="height:100%;width:100%;"/>
             </div>
-        
-            <div class="row mt-5">
-                <div class="col-12 col-md-6 pt-4 order-1 order-md-0">
-                  <br><br>
-                  <div class="l2 mt-5 lspace-5">CORPORATE EVENTS</div>
-                  <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help
-                    you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
-                    grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
-                    region since 2005 with an established reputation for excellence.
-                  </div>
-                  <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
-                </div>
-                <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
-                  clip: rect(0px,auto,500px,0px);"></div> -->
-                  <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
-              </div>
+          <div class="col-12 col-md-6">
+            <br><br >
+            <div class="l2 mt-5 lspace-5">STYLING</div>
+            <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the
+              elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
+              events that inspire and excite!
+            </div>
+            <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
+          </div>
         </div>
+    
+        <div class="row mt-5">
+            <div class="col-12 col-md-6 pt-4 order-1 order-md-0">
+              <br><br>
+              <div class="l2 mt-5 lspace-5">CORPORATE EVENTS</div>
+              <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help
+                you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
+                grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
+                region since 2005 with an established reputation for excellence.
+              </div>
+              <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
+            </div>
+            <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
+              clip: rect(0px,auto,500px,0px);"></div> -->
+              <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
+          </div>
       </div>
 
         <!-- scrolling background -->
