--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -33,7 +33,7 @@
 <div class="px-0 px-md-5 mx-2">
     <!-- hireCollection -->
 <div class="hireCollection">
-    <div class="text-center mb-5 l2 lspace-3">Hire Collection</div>
+    <div class="text-center my-5 l2 lspace-3">Hire Specials</div>
     <div class="row">
       <div class="col-6 col-md-3 "><img src="../../../../assets/images/productImg1.jpeg" class="img100">
         <div>Oblong Trestle Tables</div>
@@ -41,15 +41,15 @@
       </div>
       <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg2.jpeg" class="img100">
         <div>Round Tables</div>
-        <div><span class="s2goldbold">$100</span> &nbsp;<s>$120</s></div>
+        <div><span class="s2goldbold mr-5">$100</span> &nbsp;<s>$120</s></div>
       </div>
       <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg3.png" class="img100">
         <div>Round Tables</div>
-        <div><span class="s2goldbold">$100</span> &nbsp;<s>$120</s></div>
+        <div><span class="s2goldbold mr-5">$100</span> &nbsp;<s>$120</s></div>
       </div>
       <div class="col-6 col-md-3"><img src="../../../../assets/images/productImg2.jpeg" class="img100">
         <div>Round Tables</div>
-        <div><span class="s2goldbold">$100</span> &nbsp;<s>$120</s></div>
+        <div><span class="s2goldbold mr-5">$100</span> &nbsp;<s>$120</s></div>
       </div>
     </div>
     <div class="row justify-content-md-center my-3">
@@ -59,7 +59,7 @@
       </div>
     </div>
   <!-- Title paragraph -->
-    <div class="m1 text-center">
+    <div class="m1 text-center mt-5">
         This is title
     </div>
       <br>
