--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -1,10 +1,25 @@
 <div class="container-fluid">
   <div class="px-0 px-md-5 mx-2">
   <div class="row text-center l1">
-  <div class="col-12"> Our Gallery</div>
+  <div class="col-12 mt-5"> Our Gallery</div>
   </div>
-  <div class="row text-center l1"> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery1</div> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery2</div></div>
-  <div class="row text-center l1"> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery3</div> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery4</div></div>
-  <div class="row text-center l1"> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery5</div> <div class="col-12 col-md-6 egbg h480 pt-5">Gallery6</div></div>
+  <!-- <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery1</div> <div class="col-12 col-md-6 egbg h480">Gallery2</div></div>
+  <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery3</div> <div class="col-12 col-md-6 egbg h480">Gallery4</div></div>
+  <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery5</div> <div class="col-12 col-md-6 egbg h480">Gallery6</div></div> -->
+  <div class="row l1 pb-30">
+    <div class="col-6"><div class="gallaryBlocks">Gallery1</div></div>
+    <div class="col-6"><div class="gallaryBlocks">Gallery2</div></div>
+  </div>
+
+  <div class="row l1 pb-30">
+      <div class="col-6"><div class="gallaryBlocks">Gallery3</div></div>
+      <div class="col-6"><div class="gallaryBlocks">Gallery4</div></div>
+    </div>
+
+  <div class="row l1 pb-30">
+      <div class="col-6"><div class="gallaryBlocks">Gallery5</div></div>
+      <div class="col-6"><div class="gallaryBlocks">Gallery6</div></div>
+
+  </div>
   </div>  
 </div>
