add padding and margin on container-fluid

--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -1,4 +1,5 @@
-<div class="container" #container>
+<div class="container-fluid" #container>
+  <div class=" px-0 px-md-5 mx-2">
   <div class="row mt-5"><div class="col-12 s2goldbold"><a (click)="backClicked()"> Dinnerware and Glassware </a> > Golden Glassline Plate</div></div>
   <div class="row my-5">
   <div class="col-12 col-md-6 col-lg-6 p-0">
@@ -37,7 +38,7 @@
     </div>
     <div *ngIf="!quantityFilled">Please enter Quantity</div>
   </div> -->
-  <div class="col-12 col-md-6 col-lg-6 pl-lg-6">
+  <div class="col-12 col-md-6 col-lg-6 pl-lg-5">
     <!-- large part of img -->
     <div id="showDetails" #showDetails>
       <!-- <span class="l2" #showDetails>the testing area</span> -->
@@ -61,11 +62,6 @@
     </div>
 
    </div>
-   <!-- <div class="col-2">
-     Products On Sale!
-     <div><img src="../../../../assets/images/productImg1.jpeg" class="w-100"></div>
-     <div><span></span><span></span></div>
-     <div><img src="../../../../assets/images/productImg2.jpeg" class="w-100"></div>
-   </div> -->
  </div>
+</div>
 </div>
