--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -6,7 +6,8 @@
  <!-- <img src="assets/images/location.PNG" style="width:100%;filter: brightness(90%);"/> -->
 </div>
 
-<div class="container">
+<div class="container-fluid">
+  <div class=" px-0 px-md-5 mx-2">
   <div class="row py-5">
     <!-- facebook -->
     <div class="col-12 col-md-4">
@@ -115,6 +116,7 @@
     </div>
 
     </div>
+  </div>
   </div>
 
   <!-- <div class="container">
