--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -1,17 +1,5 @@
-<!-- header bit -->
-<!-- <header>
-  <div class="jumbotron-fluid">
-    <h1 class="j1">Frequently Asked Questions</h1>
-  </div>
-</header> -->
-
-<!-- <div class="container-fluid faqImg">
-    <div class="row py-3"> &nbsp;</div>
-      <div class="row py-4"><div class="col-12 j1 text-center">Frequently Asked Questions</div></div>
-      <div class="row py-3"> &nbsp;</div>
-</div> -->
-<!-- accordion bit -->
-<div class="container">
+<div class="container-fluid">
+  <div class="px-0 px-md-5 mx-2">
   <div class="row my-3 pb-4 l1 text-center"><div class="col-12">FAQ</div></div>
   <div id="panel panel-default">
       <div class="card" *ngFor='let question of questions; index as i'>
@@ -27,4 +15,5 @@
         </div>
     </div>
   </div>
+</div>
 </div>
