--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="container-fluid">
+  <div class="px-0 px-md-5 mx-2">
+
     <div class="row py-3">
         <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'hire'">  Our Hires</div>
         <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'service'">  Our Services</div>
@@ -57,6 +59,6 @@
       <div><a  class="m1" [routerLink] = "['/product/'+product.ProdId]">{{product.Title}} </a></div>
       <div class="row"><div class="s2gold col-4">$ {{product.Price}}</div><div class="s2 col-6">Hired: 12</div></div>
     </div>
-
   </div>
+</div>
 </div>
