--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -1,51 +1,51 @@
-<div class="container pt-2">
+<div class="container-fluid pt-2">
+  <div class="px-0 px-md-5 mx-2">
   <div class="row py-5"> <div class="col-12 s2goldbold">>Shopping cart</div></div>
   <div class="row py-1">
-      <div class="col-5 s2bold"> Product Detail</div>
+      <div class="col-6 s2bold"> Product Detail</div>
       <div class="col-2 s2bold ">Unit price</div>
       <div class="col-1 s2bold">Amount</div>  
       <div class="col-1 s2bold">Totally</div>
-      <div class="col-3 s2bold text-center">Action</div>
+      <div class="col-2 s2bold text-center">Action</div>
   </div>
   <div class="row mt-3">
       <div class="col-2"> <img src="../../../assets/images/productImg1.jpeg"></div>
-      <div class="col-3"><span class="m2">Illuminated LOVE</span></div>
+      <div class="col-4"><span class="m2">Illuminated LOVE</span></div>
       <div class="col-2 ">$150</div>
       <div class="col-1 ">3</div>
       <div class="col-1 bg-gray">$450</div>
-      <div class="col-3 text-center">
+      <div class="col-2 text-center">
           <div>Delete</div>
           <div>View Detail</div>
       </div>  
     </div>
     <div class="row mt-3">
       <div class="col-2"><img src="../../../assets/images/productImg2.jpeg"></div>
-      <div class="col-3"><span class="m2">Signature Letter Range</span></div>
+      <div class="col-4"><span class="m2">Signature Letter Range</span></div>
       <div class="col-2">$120</div>
       <div class="col-1">3</div>
       <div class="col-1 bg-gray">$360</div>
-      <div class="col-3 text-center">
+      <div class="col-2 text-center">
         <div>Delete</div>
         <div>View Detail</div>
       </div>
     </div>
     <div class="row mt-3">
         <div class="col-2"><img src="../../../assets/images/productImg3.png"></div>
-        <div class="col-3"><span class="m2">LOVE in White</span></div>
+        <div class="col-4"><span class="m2">LOVE in White</span></div>
         <div class="col-2">$140</div>
         <div class="col-1">3</div>
         <div class="col-1 bg-gray">$420</div>
-        <div class="col-3 text-center">
+        <div class="col-2 text-center">
           <div>Delete</div>
           <div>View Detail</div>
         </div>
       </div>
+      <div class="row justify-content-end py-3">
+          <div class="col-8 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
+          <div class="col-2 py-2 text-right">Total Price: <span class="s2bold">$1230</span></div>
+          <div class="col-2 text-center"><button class="btn btn-outline-gold" routerLink = '/userInfo'>Submit cart</button></div>
+      </div>
+</div>
 </div>
 
-<div class="container my-5">
-  <div class="row justify-content-end py-3">
-      <div class="col-6 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
-      <div class="col-3 py-2">Total Price: <span class="s2bold">$1230</span></div>
-      <div class="col-3"><button class="btn btn-outline-gold" routerLink = '/userInfo'>Submit cart</button></div>
-  </div>
-</div>
